2000-06-12  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* session.scm (help): Warn user if 'regex isn't provided.

	* Makefile.am (ice9_sources): Removed getopt-gnu-style.scm.

	* getopt-gnu-style.scm: Removed deprecated module.

2000-06-11  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* boot-9.scm (make-autoload-interface): Set init value for uses to
	'() instead of #f.
	(make-modules-in): Name modules with their real (= full) names.
	(the-root-module, the-scm-module): Named `(guile)' instead of
	`the-root-module'.
	(the-scm-module): Set kind to 'interface.

	* Makefile.am (ice9_sources): Replaced doc.scm with
	documentation.scm.

	* session.scm (ice-9): Use module (ice-9 documentation).
	(name): Use the name property if everything else fails.
	(apropos-fold): New procedure.
	(apropos-internal): Re-implement in terms of `apropos-fold'.
	(help): Rewritten.

	* doc.scm: Removed module (ice-9 doc).

	* documentation.scm: New module (ice-9 documentation).

2000-06-08  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* doc.scm (documentation-files): Renamed from `doc-files'.
	(write-all): Removed.
	(find-documentation): Renamed from `documentation'.  Return
	documentation string instead of printing it.  Not exported.

2000-06-05  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* boot-9.scm (error-catching-loop): Inform about debugger on error.

2000-06-04  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* boot-9.scm (scm-module-closure): New procedure: Was previously
	anonymous.  Now needed in modules.c.
	(make-module): Use `standard-eval-closure' to create the eval
	closure.

2000-05-14  Gary Houston  <ghouston@arglist.com>

	* boot-9.scm (load-user-init): rewritten.  first work out the home
	directory and then try to open the file (previously it could try
	to open a file in more than one place).  catch exceptions when
	trying to get a directory from the user database.  don't check
	that ~/.guile is not a directory before trying to load it (a lack